--- a/generic-resource-api/model/swagger/pom.xml
+++ b/generic-resource-api/model/swagger/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.onap.ccsdk.parent</groupId>
         <artifactId>oparent</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.1</version>
     </parent>
 
     <groupId>org.onap.sdnc.northbound</groupId>
